1. ignore 항목 업데이트

--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,5 @@
 /LabelTool/.vs/LabelTool
 /LabelTool/LabelTool/obj
 /LabelTool/LabelTool/bin/Debug/net9.0-windows
+/LabelTool/LabelTool/bin/Debug
+/LabelTool/.vs/ProjectEvaluation
